package grpc_test

import (
	"context"
	"crypto/ed25519"
	"testing"
	"time"

	object_pb "bonanza.build/pkg/proto/storage/object"
	tag_pb "bonanza.build/pkg/proto/storage/tag"
	"bonanza.build/pkg/storage/object"
	"bonanza.build/pkg/storage/tag"
	"bonanza.build/pkg/storage/tag/grpc"

	"github.com/buildbarn/bb-storage/pkg/testutil"
	"github.com/buildbarn/bb-storage/pkg/util"
	"github.com/stretchr/testify/require"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/timestamppb"

	"go.uber.org/mock/gomock"
)

func TestResolver(t *testing.T) {
	ctrl, ctx := gomock.WithContext(context.Background(), t)

	client := NewMockResolverClient(ctrl)
	updater := grpc.NewResolver(client)

	t.Run("BackendFailure", func(t *testing.T) {
		// Errors reported by the backend should be propagated.
		client.EXPECT().ResolveTag(ctx, testutil.EqProto(t, &tag_pb.ResolveTagRequest{
			Namespace: &object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			},
			Key: &tag_pb.Key{
				SignaturePublicKey: []byte{
					// PKIX header.
					0x30, 0x2a, 0x30, 0x05, 0x06, 0x03, 0x2b, 0x65,
					0x70, 0x03, 0x21, 0x00,
					// Ed25519 public key.
					0x2b, 0x2a, 0x29, 0x0b, 0xbe, 0xa2, 0xb7, 0xe7,
					0x20, 0x76, 0xec, 0x5d, 0x3e, 0x4e, 0x06, 0x0b,
					0x73, 0x39, 0xad, 0xc8, 0xe5, 0x1f, 0xd1, 0x35,
					0x28, 0x93, 0xbf, 0xcd, 0x8f, 0x2a, 0x83, 0xd7,
				},
				Hash: []byte{
					0x27, 0x7a, 0x21, 0x6c, 0xed, 0xc0, 0x3e, 0x38,
					0xdb, 0xc2, 0x49, 0xee, 0x9f, 0x55, 0x5d, 0x56,
					0x6f, 0xaa, 0xbb, 0x1a, 0xf8, 0x6a, 0x51, 0xf7,
					0xfd, 0x82, 0xaa, 0xcc, 0x44, 0x51, 0x5b, 0x1b,
				},
			},
		})).Return(nil, status.Error(codes.Unavailable, "Server offline"))

		_, _, err := updater.ResolveTag(
			ctx,
			util.Must(object.NewNamespace(&object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			})),
			tag.Key{
				SignaturePublicKey: ed25519.PublicKey{
					0x2b, 0x2a, 0x29, 0x0b, 0xbe, 0xa2, 0xb7, 0xe7,
					0x20, 0x76, 0xec, 0x5d, 0x3e, 0x4e, 0x06, 0x0b,
					0x73, 0x39, 0xad, 0xc8, 0xe5, 0x1f, 0xd1, 0x35,
					0x28, 0x93, 0xbf, 0xcd, 0x8f, 0x2a, 0x83, 0xd7,
				},
				Hash: []byte{
					0x27, 0x7a, 0x21, 0x6c, 0xed, 0xc0, 0x3e, 0x38,
					0xdb, 0xc2, 0x49, 0xee, 0x9f, 0x55, 0x5d, 0x56,
					0x6f, 0xaa, 0xbb, 0x1a, 0xf8, 0x6a, 0x51, 0xf7,
					0xfd, 0x82, 0xaa, 0xcc, 0x44, 0x51, 0x5b, 0x1b,
				},
			},
			/* minimumTimestamp = */ nil,
		)
		testutil.RequireEqualStatus(t, status.Error(codes.Unavailable, "Server offline"), err)
	})

	t.Run("InvalidReference", func(t *testing.T) {
		// If the server returns a malformed reference, an
		// internal server error should be returned.
		client.EXPECT().ResolveTag(ctx, testutil.EqProto(t, &tag_pb.ResolveTagRequest{
			Namespace: &object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			},
			Key: &tag_pb.Key{
				SignaturePublicKey: []byte{
					// PKIX header.
					0x30, 0x2a, 0x30, 0x05, 0x06, 0x03, 0x2b, 0x65,
					0x70, 0x03, 0x21, 0x00,
					// Ed25519 public key.
					0x8a, 0x07, 0xeb, 0x8e, 0x05, 0x4e, 0x0b, 0x38,
					0xb5, 0x30, 0xbf, 0x2f, 0xe5, 0x31, 0x52, 0xc1,
					0x14, 0x09, 0xf9, 0x8c, 0xe1, 0xa8, 0x4f, 0x28,
					0xa9, 0xfc, 0xee, 0x17, 0xb8, 0xbe, 0x81, 0x01,
				},
				Hash: []byte{
					0xc4, 0x63, 0x1f, 0x3c, 0x1c, 0x99, 0x73, 0x21,
					0xd4, 0x5e, 0xa5, 0x32, 0x69, 0x41, 0x0b, 0xdf,
					0xa3, 0x04, 0x27, 0xf4, 0x16, 0x59, 0x28, 0x60,
					0x67, 0xa7, 0xfd, 0x98, 0x6a, 0xb2, 0x94, 0x38,
				},
			},
			MinimumTimestamp: &timestamppb.Timestamp{Seconds: 1762284040},
		})).Return(&tag_pb.ResolveTagResponse{
			SignedValue: &tag_pb.SignedValue{
				Value: &tag_pb.Value{
					Reference: []byte{1, 2, 3},
					Timestamp: &timestamppb.Timestamp{Seconds: 1762284057},
				},
				Signature: []byte{
					0x06, 0xb5, 0x0c, 0xc2, 0x63, 0x26, 0x81, 0x02,
					0xe4, 0x3f, 0x67, 0x1f, 0xcc, 0x26, 0x93, 0x78,
					0x11, 0xeb, 0x13, 0xdc, 0x32, 0x5c, 0x97, 0x37,
					0x8c, 0xec, 0xb2, 0xdc, 0x94, 0x24, 0x76, 0xcf,
					0x85, 0xd0, 0xc1, 0xf4, 0xac, 0xb6, 0xa1, 0xe2,
					0x38, 0x01, 0x73, 0x61, 0x49, 0x64, 0x2e, 0xa4,
					0x5c, 0x81, 0xdb, 0x29, 0xa0, 0x50, 0xff, 0x97,
					0x0a, 0x40, 0xab, 0xc9, 0x20, 0x27, 0xa4, 0x08,
				},
			},
			Complete: false,
		}, nil)

		minimumTimestamp := time.Unix(1762284040, 0)
		_, _, err := updater.ResolveTag(
			ctx,
			util.Must(object.NewNamespace(&object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			})),
			tag.Key{
				SignaturePublicKey: ed25519.PublicKey{
					0x8a, 0x07, 0xeb, 0x8e, 0x05, 0x4e, 0x0b, 0x38,
					0xb5, 0x30, 0xbf, 0x2f, 0xe5, 0x31, 0x52, 0xc1,
					0x14, 0x09, 0xf9, 0x8c, 0xe1, 0xa8, 0x4f, 0x28,
					0xa9, 0xfc, 0xee, 0x17, 0xb8, 0xbe, 0x81, 0x01,
				},
				Hash: []byte{
					0xc4, 0x63, 0x1f, 0x3c, 0x1c, 0x99, 0x73, 0x21,
					0xd4, 0x5e, 0xa5, 0x32, 0x69, 0x41, 0x0b, 0xdf,
					0xa3, 0x04, 0x27, 0xf4, 0x16, 0x59, 0x28, 0x60,
					0x67, 0xa7, 0xfd, 0x98, 0x6a, 0xb2, 0x94, 0x38,
				},
			},
			&minimumTimestamp,
		)
		testutil.RequireEqualStatus(t, status.Error(codes.Internal, "Received invalid signed value from server: Invalid reference: Reference is 3 bytes in size, while SHA256_V1 references are 40 bytes in size"), err)
	})

	t.Run("InvalidSignature", func(t *testing.T) {
		// We should reject any values returned by the server
		// that do not pass signature validation.
		client.EXPECT().ResolveTag(ctx, testutil.EqProto(t, &tag_pb.ResolveTagRequest{
			Namespace: &object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			},
			Key: &tag_pb.Key{
				SignaturePublicKey: []byte{
					// PKIX header.
					0x30, 0x2a, 0x30, 0x05, 0x06, 0x03, 0x2b, 0x65,
					0x70, 0x03, 0x21, 0x00,
					// Ed25519 public key.
					0x5a, 0x1c, 0x24, 0xf5, 0xd6, 0x19, 0xfc, 0x14,
					0xa9, 0xe0, 0x84, 0xf7, 0x9a, 0x9e, 0xae, 0x48,
					0xc6, 0x9f, 0x37, 0x77, 0xb5, 0x55, 0x2c, 0x48,
					0xde, 0x24, 0x9c, 0x38, 0x9c, 0xbf, 0x77, 0x9b,
				},
				Hash: []byte{
					0xc4, 0x63, 0x1f, 0x3c, 0x1c, 0x99, 0x73, 0x21,
					0xd4, 0x5e, 0xa5, 0x32, 0x69, 0x41, 0x0b, 0xdf,
					0xa3, 0x04, 0x27, 0xf4, 0x16, 0x59, 0x28, 0x60,
					0x67, 0xa7, 0xfd, 0x98, 0x6a, 0xb2, 0x94, 0x38,
				},
			},
		})).Return(&tag_pb.ResolveTagResponse{
			SignedValue: &tag_pb.SignedValue{
				Value: &tag_pb.Value{
					Reference: []byte{
						// SHA-256 hash.
						0xb7, 0xdb, 0x00, 0xfc, 0x7a, 0xcf, 0xa6, 0xac,
						0x88, 0x8e, 0xbe, 0x58, 0x41, 0x65, 0x33, 0xd7,
						0xc1, 0x1d, 0x30, 0xb1, 0x52, 0x13, 0x5a, 0x6b,
						0xce, 0x8b, 0xda, 0x21, 0x6b, 0x26, 0x50, 0xa3,
						// Size in bytes.
						0xd7, 0x84, 0x01,
						// Height.
						0x07,
						// Degree.
						0x28, 0x00,
						// Maximum parents total size in bytes.
						0x77, 0x43,
					},
					Timestamp: &timestamppb.Timestamp{Seconds: 1762288419},
				},
				Signature: []byte{
					0x63, 0x1b, 0x0a, 0x3a, 0x33, 0x0f, 0x6d, 0x34,
					0xc0, 0x26, 0x51, 0x74, 0x50, 0x12, 0x1c, 0xc7,
					0x64, 0x24, 0xc8, 0x26, 0xc2, 0xd0, 0x9e, 0x85,
					0xe4, 0xc4, 0xdc, 0xd4, 0xbc, 0xe9, 0xa0, 0xb9,
					0x0d, 0xe2, 0x91, 0x39, 0xd2, 0x68, 0x8a, 0xbe,
					0x59, 0x63, 0x36, 0x1f, 0x0f, 0x94, 0xb5, 0x47,
					0xea, 0x41, 0x75, 0x8c, 0xc1, 0xb9, 0x04, 0xf9,
					0x43, 0x83, 0xa6, 0x5c, 0xd5, 0xae, 0x20, 0x75,
				},
			},
			Complete: true,
		}, nil)

		_, _, err := updater.ResolveTag(
			ctx,
			util.Must(object.NewNamespace(&object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			})),
			tag.Key{
				SignaturePublicKey: ed25519.PublicKey{
					0x5a, 0x1c, 0x24, 0xf5, 0xd6, 0x19, 0xfc, 0x14,
					0xa9, 0xe0, 0x84, 0xf7, 0x9a, 0x9e, 0xae, 0x48,
					0xc6, 0x9f, 0x37, 0x77, 0xb5, 0x55, 0x2c, 0x48,
					0xde, 0x24, 0x9c, 0x38, 0x9c, 0xbf, 0x77, 0x9b,
				},
				Hash: []byte{
					0xc4, 0x63, 0x1f, 0x3c, 0x1c, 0x99, 0x73, 0x21,
					0xd4, 0x5e, 0xa5, 0x32, 0x69, 0x41, 0x0b, 0xdf,
					0xa3, 0x04, 0x27, 0xf4, 0x16, 0x59, 0x28, 0x60,
					0x67, 0xa7, 0xfd, 0x98, 0x6a, 0xb2, 0x94, 0x38,
				},
			},
			/* minimumTimestamp = */ nil,
		)
		testutil.RequireEqualStatus(t, status.Error(codes.Internal, "Received invalid signed value from server: Invalid signature"), err)
	})

	t.Run("Success", func(t *testing.T) {
		client.EXPECT().ResolveTag(ctx, testutil.EqProto(t, &tag_pb.ResolveTagRequest{
			Namespace: &object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			},
			Key: &tag_pb.Key{
				SignaturePublicKey: []byte{
					// PKIX header.
					0x30, 0x2a, 0x30, 0x05, 0x06, 0x03, 0x2b, 0x65,
					0x70, 0x03, 0x21, 0x00,
					// Ed25519 public key.
					0x1d, 0x58, 0x7d, 0x77, 0x24, 0x67, 0x0d, 0x69,
					0x93, 0x51, 0x94, 0x99, 0x8c, 0x4f, 0xd7, 0x48,
					0xdb, 0xcf, 0xba, 0x49, 0xde, 0xbd, 0x36, 0x3a,
					0x9c, 0x01, 0x36, 0x6a, 0xd9, 0x15, 0xb1, 0x9c,
				},
				Hash: []byte{
					0xc4, 0x63, 0x1f, 0x3c, 0x1c, 0x99, 0x73, 0x21,
					0xd4, 0x5e, 0xa5, 0x32, 0x69, 0x41, 0x0b, 0xdf,
					0xa3, 0x04, 0x27, 0xf4, 0x16, 0x59, 0x28, 0x60,
					0x67, 0xa7, 0xfd, 0x98, 0x6a, 0xb2, 0x94, 0x38,
				},
			},
		})).Return(&tag_pb.ResolveTagResponse{
			SignedValue: &tag_pb.SignedValue{
				Value: &tag_pb.Value{
					Reference: []byte{
						// SHA-256 hash.
						0x1e, 0xf1, 0x27, 0x20, 0x45, 0xcc, 0xe7, 0xd3,
						0x80, 0x71, 0xc2, 0x87, 0x74, 0x2e, 0xdf, 0x54,
						0xef, 0x0c, 0x01, 0x6e, 0x78, 0x35, 0x2d, 0x2b,
						0xc8, 0xba, 0x11, 0x69, 0x14, 0x14, 0xc1, 0x50,
						// Size in bytes.
						0xd7, 0x84, 0x01,
						// Height.
						0x07,
						// Degree.
						0x28, 0x00,
						// Maximum parents total size in bytes.
						0x77, 0x43,
					},
					Timestamp: &timestamppb.Timestamp{Seconds: 1762284528},
				},
				Signature: []byte{
					0x24, 0xfe, 0xad, 0x8e, 0xee, 0x8c, 0x55, 0xfb,
					0x90, 0x2a, 0x95, 0x71, 0xa7, 0x87, 0x9e, 0x65,
					0x15, 0x81, 0x49, 0x1e, 0xb7, 0x57, 0x89, 0xdf,
					0x62, 0x3c, 0x41, 0xf2, 0x4f, 0xd7, 0x81, 0x9b,
					0x6d, 0xfb, 0xb7, 0x4c, 0x81, 0x3e, 0xc1, 0xbb,
					0x97, 0xd7, 0xf9, 0x4a, 0xd9, 0xbe, 0x7e, 0x6c,
					0xac, 0x23, 0x65, 0x41, 0x85, 0xf1, 0x43, 0xaf,
					0x7f, 0xbf, 0xab, 0x88, 0xa2, 0x1b, 0xb0, 0x0f,
				},
			},
			Complete: true,
		}, nil)

		signedValue, complete, err := updater.ResolveTag(
			ctx,
			util.Must(object.NewNamespace(&object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			})),
			tag.Key{
				SignaturePublicKey: ed25519.PublicKey{
					0x1d, 0x58, 0x7d, 0x77, 0x24, 0x67, 0x0d, 0x69,
					0x93, 0x51, 0x94, 0x99, 0x8c, 0x4f, 0xd7, 0x48,
					0xdb, 0xcf, 0xba, 0x49, 0xde, 0xbd, 0x36, 0x3a,
					0x9c, 0x01, 0x36, 0x6a, 0xd9, 0x15, 0xb1, 0x9c,
				},
				Hash: []byte{
					0xc4, 0x63, 0x1f, 0x3c, 0x1c, 0x99, 0x73, 0x21,
					0xd4, 0x5e, 0xa5, 0x32, 0x69, 0x41, 0x0b, 0xdf,
					0xa3, 0x04, 0x27, 0xf4, 0x16, 0x59, 0x28, 0x60,
					0x67, 0xa7, 0xfd, 0x98, 0x6a, 0xb2, 0x94, 0x38,
				},
			},
			/* minimumTimestamp = */ nil,
		)
		require.NoError(t, err)
		require.Equal(
			t,
			tag.SignedValue{
				Value: tag.Value{
					Reference: object.MustNewSHA256V1LocalReference("1ef1272045cce7d38071c287742edf54ef0c016e78352d2bc8ba11691414c150", 99543, 7, 40, 375665),
					Timestamp: time.Unix(1762284528, 0).UTC(),
				},
				Signature: []byte{
					0x24, 0xfe, 0xad, 0x8e, 0xee, 0x8c, 0x55, 0xfb,
					0x90, 0x2a, 0x95, 0x71, 0xa7, 0x87, 0x9e, 0x65,
					0x15, 0x81, 0x49, 0x1e, 0xb7, 0x57, 0x89, 0xdf,
					0x62, 0x3c, 0x41, 0xf2, 0x4f, 0xd7, 0x81, 0x9b,
					0x6d, 0xfb, 0xb7, 0x4c, 0x81, 0x3e, 0xc1, 0xbb,
					0x97, 0xd7, 0xf9, 0x4a, 0xd9, 0xbe, 0x7e, 0x6c,
					0xac, 0x23, 0x65, 0x41, 0x85, 0xf1, 0x43, 0xaf,
					0x7f, 0xbf, 0xab, 0x88, 0xa2, 0x1b, 0xb0, 0x0f,
				},
			},
			signedValue,
		)
		require.True(t, complete)
	})
}
