package grpc_test

import (
	"context"
	"crypto/ed25519"
	"testing"
	"time"

	object_pb "bonanza.build/pkg/proto/storage/object"
	tag_pb "bonanza.build/pkg/proto/storage/tag"
	"bonanza.build/pkg/storage/object"
	"bonanza.build/pkg/storage/tag"
	"bonanza.build/pkg/storage/tag/grpc"

	"github.com/buildbarn/bb-storage/pkg/testutil"
	"github.com/stretchr/testify/require"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/emptypb"
	"google.golang.org/protobuf/types/known/timestamppb"

	"go.uber.org/mock/gomock"
)

func TestUpdater(t *testing.T) {
	ctrl, ctx := gomock.WithContext(context.Background(), t)

	client := NewMockUpdaterClient(ctrl)
	updater := grpc.NewUpdater(client)

	t.Run("BackendFailure", func(t *testing.T) {
		// Errors reported by the backend should be propagated.
		client.EXPECT().UpdateTag(ctx, testutil.EqProto(t, &tag_pb.UpdateTagRequest{
			Namespace: &object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			},
			Key: &tag_pb.Key{
				SignaturePublicKey: []byte{
					// PKIX header.
					0x30, 0x2a, 0x30, 0x05, 0x06, 0x03, 0x2b, 0x65,
					0x70, 0x03, 0x21, 0x00,
					// Ed25519 public key.
					0xf7, 0x33, 0xff, 0x0a, 0xdf, 0x69, 0xaf, 0xa8,
					0xfb, 0x42, 0xf2, 0x6b, 0x1e, 0x52, 0xc7, 0x92,
					0xa4, 0x4b, 0x62, 0xd0, 0x57, 0xba, 0x51, 0x84,
					0xf1, 0x50, 0xaa, 0xdb, 0xd2, 0x59, 0x7d, 0xdb,
				},
				Hash: []byte{
					0xb3, 0xee, 0x79, 0x09, 0x25, 0x68, 0x16, 0xf6,
					0x38, 0xce, 0x58, 0x64, 0x7a, 0x95, 0x6d, 0xca,
					0xec, 0xad, 0x6f, 0xec, 0xfa, 0x1a, 0xad, 0x59,
					0x0a, 0x88, 0x26, 0xc0, 0x1d, 0x0c, 0xe8, 0xe0,
				},
			},
			SignedValue: &tag_pb.SignedValue{
				Value: &tag_pb.Value{
					Reference: []byte{
						// SHA-256 hash.
						0x75, 0x1a, 0x11, 0x12, 0xa7, 0xb0, 0x3c, 0x95,
						0x42, 0x66, 0x71, 0xe6, 0x8d, 0xc7, 0x83, 0x38,
						0x24, 0x4b, 0xd2, 0xbd, 0x91, 0x1a, 0xbe, 0x8b,
						0xcd, 0x60, 0xf8, 0x63, 0xb1, 0xfb, 0xe2, 0xc0,
						// Size in bytes.
						0xd7, 0x84, 0x01,
						// Height.
						0x07,
						// Degree.
						0x28, 0x00,
						// Maximum parents total size in bytes.
						0x77, 0x43,
					},
					Timestamp: &timestamppb.Timestamp{Seconds: 1762285450},
				},
				Signature: []byte{
					0xf5, 0xfc, 0xf7, 0xa4, 0x29, 0xa4, 0xeb, 0xdb,
					0x06, 0x6f, 0xf6, 0x3c, 0xf2, 0xf1, 0x0c, 0x44,
					0x86, 0x4a, 0x77, 0xc1, 0xd6, 0xdf, 0x79, 0x61,
					0x04, 0x4c, 0x09, 0xa0, 0x40, 0xb8, 0x7b, 0x7f,
					0x24, 0xc5, 0xa5, 0xec, 0x5e, 0x0a, 0xb4, 0xdf,
					0xb4, 0x9a, 0x00, 0x08, 0x17, 0x0d, 0x9a, 0xa2,
					0x2a, 0x38, 0xec, 0xb9, 0x0a, 0xe4, 0xac, 0xbb,
					0x7c, 0x16, 0x75, 0x4c, 0x11, 0x21, 0x1c, 0x07,
				},
			},
			Lease: []byte{1, 2, 3},
		})).Return(nil, status.Error(codes.Unavailable, "Server offline"))

		testutil.RequireEqualStatus(
			t,
			status.Error(codes.Unavailable, "Server offline"),
			updater.UpdateTag(
				ctx,
				object.Namespace{
					InstanceName:    object.NewInstanceName("hello/world"),
					ReferenceFormat: object.SHA256V1ReferenceFormat,
				},
				tag.Key{
					SignaturePublicKey: ed25519.PublicKey{
						0xf7, 0x33, 0xff, 0x0a, 0xdf, 0x69, 0xaf, 0xa8,
						0xfb, 0x42, 0xf2, 0x6b, 0x1e, 0x52, 0xc7, 0x92,
						0xa4, 0x4b, 0x62, 0xd0, 0x57, 0xba, 0x51, 0x84,
						0xf1, 0x50, 0xaa, 0xdb, 0xd2, 0x59, 0x7d, 0xdb,
					},
					Hash: []byte{
						0xb3, 0xee, 0x79, 0x09, 0x25, 0x68, 0x16, 0xf6,
						0x38, 0xce, 0x58, 0x64, 0x7a, 0x95, 0x6d, 0xca,
						0xec, 0xad, 0x6f, 0xec, 0xfa, 0x1a, 0xad, 0x59,
						0x0a, 0x88, 0x26, 0xc0, 0x1d, 0x0c, 0xe8, 0xe0,
					},
				},
				tag.SignedValue{
					Value: tag.Value{
						Reference: object.MustNewSHA256V1LocalReference("751a1112a7b03c95426671e68dc78338244bd2bd911abe8bcd60f863b1fbe2c0", 99543, 7, 40, 375665),
						Timestamp: time.Unix(1762285450, 0),
					},
					Signature: []byte{
						0xf5, 0xfc, 0xf7, 0xa4, 0x29, 0xa4, 0xeb, 0xdb,
						0x06, 0x6f, 0xf6, 0x3c, 0xf2, 0xf1, 0x0c, 0x44,
						0x86, 0x4a, 0x77, 0xc1, 0xd6, 0xdf, 0x79, 0x61,
						0x04, 0x4c, 0x09, 0xa0, 0x40, 0xb8, 0x7b, 0x7f,
						0x24, 0xc5, 0xa5, 0xec, 0x5e, 0x0a, 0xb4, 0xdf,
						0xb4, 0x9a, 0x00, 0x08, 0x17, 0x0d, 0x9a, 0xa2,
						0x2a, 0x38, 0xec, 0xb9, 0x0a, 0xe4, 0xac, 0xbb,
						0x7c, 0x16, 0x75, 0x4c, 0x11, 0x21, 0x1c, 0x07,
					},
				},
				[]byte{1, 2, 3},
			),
		)
	})

	t.Run("Success", func(t *testing.T) {
		client.EXPECT().UpdateTag(ctx, testutil.EqProto(t, &tag_pb.UpdateTagRequest{
			Namespace: &object_pb.Namespace{
				InstanceName:    "hello/world",
				ReferenceFormat: object_pb.ReferenceFormat_SHA256_V1,
			},
			Key: &tag_pb.Key{
				SignaturePublicKey: []byte{
					// PKIX header.
					0x30, 0x2a, 0x30, 0x05, 0x06, 0x03, 0x2b, 0x65,
					0x70, 0x03, 0x21, 0x00,
					// Ed25519 public key.
					0xca, 0x94, 0xb0, 0xdd, 0xd0, 0xae, 0x5d, 0x8a,
					0x08, 0xd6, 0xbc, 0x85, 0x5b, 0x57, 0xd4, 0x0b,
					0x6c, 0x4d, 0xe6, 0x79, 0x28, 0xf0, 0xf3, 0xaf,
					0xd0, 0x8b, 0x08, 0xf0, 0xe2, 0xf5, 0xd9, 0xb4,
				},
				Hash: []byte{
					0xed, 0x54, 0x50, 0x45, 0xa3, 0xdc, 0xcd, 0x0d,
					0xc2, 0x34, 0x81, 0x7e, 0xc7, 0x9b, 0x9c, 0xf5,
					0xd0, 0x71, 0x0f, 0x5d, 0x4e, 0xef, 0x8c, 0x48,
					0xa9, 0x80, 0x7a, 0x95, 0xe5, 0x71, 0x27, 0x63,
				},
			},
			SignedValue: &tag_pb.SignedValue{
				Value: &tag_pb.Value{
					Reference: []byte{
						// SHA-256 hash.
						0x91, 0x59, 0x32, 0xae, 0x3e, 0x36, 0xa2, 0xf3,
						0x95, 0xf6, 0xb0, 0x33, 0xdb, 0x69, 0x4d, 0x1d,
						0x31, 0xc1, 0x28, 0xf9, 0x4d, 0x08, 0xf2, 0x02,
						0x2d, 0x7c, 0x4b, 0x4f, 0x33, 0x6b, 0xc5, 0x41,
						// Size in bytes.
						0xd7, 0x84, 0x01,
						// Height.
						0x07,
						// Degree.
						0x28, 0x00,
						// Maximum parents total size in bytes.
						0x77, 0x43,
					},
					Timestamp: &timestamppb.Timestamp{Seconds: 1762286373},
				},
				Signature: []byte{
					0x2c, 0xac, 0xd3, 0xe0, 0x58, 0x57, 0x4b, 0x42,
					0xd1, 0x32, 0xf0, 0x22, 0xec, 0x59, 0xf2, 0x69,
					0xd2, 0xa6, 0x6a, 0x61, 0x5a, 0x5c, 0xca, 0xb6,
					0x40, 0x99, 0x5e, 0xf1, 0x8f, 0x85, 0x52, 0xcf,
					0xd4, 0x03, 0xf5, 0x88, 0x59, 0x8b, 0xd1, 0x8c,
					0xfb, 0x17, 0x05, 0xfc, 0x4d, 0x26, 0x7a, 0x6a,
					0x71, 0xbb, 0x89, 0x2f, 0xb4, 0x0c, 0xa3, 0x7b,
					0xc3, 0x63, 0x29, 0x32, 0x65, 0x85, 0x88, 0x09,
				},
			},
			Lease: []byte{1, 2, 3},
		})).Return(&emptypb.Empty{}, nil)

		require.NoError(t, updater.UpdateTag(
			ctx,
			object.Namespace{
				InstanceName:    object.NewInstanceName("hello/world"),
				ReferenceFormat: object.SHA256V1ReferenceFormat,
			},
			tag.Key{
				SignaturePublicKey: ed25519.PublicKey{
					0xca, 0x94, 0xb0, 0xdd, 0xd0, 0xae, 0x5d, 0x8a,
					0x08, 0xd6, 0xbc, 0x85, 0x5b, 0x57, 0xd4, 0x0b,
					0x6c, 0x4d, 0xe6, 0x79, 0x28, 0xf0, 0xf3, 0xaf,
					0xd0, 0x8b, 0x08, 0xf0, 0xe2, 0xf5, 0xd9, 0xb4,
				},
				Hash: []byte{
					0xed, 0x54, 0x50, 0x45, 0xa3, 0xdc, 0xcd, 0x0d,
					0xc2, 0x34, 0x81, 0x7e, 0xc7, 0x9b, 0x9c, 0xf5,
					0xd0, 0x71, 0x0f, 0x5d, 0x4e, 0xef, 0x8c, 0x48,
					0xa9, 0x80, 0x7a, 0x95, 0xe5, 0x71, 0x27, 0x63,
				},
			},
			tag.SignedValue{
				Value: tag.Value{
					Reference: object.MustNewSHA256V1LocalReference("915932ae3e36a2f395f6b033db694d1d31c128f94d08f2022d7c4b4f336bc541", 99543, 7, 40, 375665),
					Timestamp: time.Unix(1762286373, 0),
				},
				Signature: []byte{
					0x2c, 0xac, 0xd3, 0xe0, 0x58, 0x57, 0x4b, 0x42,
					0xd1, 0x32, 0xf0, 0x22, 0xec, 0x59, 0xf2, 0x69,
					0xd2, 0xa6, 0x6a, 0x61, 0x5a, 0x5c, 0xca, 0xb6,
					0x40, 0x99, 0x5e, 0xf1, 0x8f, 0x85, 0x52, 0xcf,
					0xd4, 0x03, 0xf5, 0x88, 0x59, 0x8b, 0xd1, 0x8c,
					0xfb, 0x17, 0x05, 0xfc, 0x4d, 0x26, 0x7a, 0x6a,
					0x71, 0xbb, 0x89, 0x2f, 0xb4, 0x0c, 0xa3, 0x7b,
					0xc3, 0x63, 0x29, 0x32, 0x65, 0x85, 0x88, 0x09,
				},
			},
			[]byte{1, 2, 3},
		))
	})
}
